# kamasu

./: .gitignore  10000_primes.txt  CMakeInitialCache.txt  CMakeLists.txt  configure  proto.cpp
CMake/: CMakeCUDACompiler.cmake.in  CMakeCUDAInformation.cmake  CMakeDetermineCUDACompiler.cmake  CMakeTestCUDACompiler.cmake  ShittyFindCuda.cmake
CMake/cuda/: FindCuda.cmake
benchmark/: CMakeLists.txt  benchmark.hpp  benchmark.py  benchmarks.cpp  create.cpp  deepexpr.cpp  deepexpr_bettercoded.cpp  deepexpr_streamed.cpp  main.cpp  matrix_multiply.cpp  matrix_multiply_2.cpp  scalarmult.cpp  sin.cpp  sine.cpp  sort.cpp
example/: CMakeLists.txt
example/audio_synthesis/: CMakeLists.txt  audio_synthesis.hpp  autocorrelate.py  generate_signal.py  kamasu.cpp
example/autocorrelation/: CMakeLists.txt  autocorrelate.py  cpu.cpp  flat_signal.py  generate_signal.py  kamasu.cpp  main.cpp  plot_frequencies.py
example/dotproduct/: CMakeLists.txt  cpu.cpp  kamasu.cpp
example/fir_filter/: CMakeLists.txt  cpu.cpp  kamasu.cpp
example/fourier_analysis/: CMakeLists.txt  cpu.cpp  fft-python.py  fft_it.py  fourier_analysis.hpp  hann_window.hpp  hann_window.py  kamasu.cpp  plot_fft.py  times.txt
example/matrix_multiply/: CMakeLists.txt  cpu.cpp  kamasu.cpp
include/resophonic/: kamasu.hpp
include/resophonic/cuda/: assign.h
include/resophonic/kamasu/: array.hpp  array_impl.hpp  config.hpp  data.hpp  dot.hpp  dumper_context.hpp  exception.hpp  grammar.hpp  holder.hpp  index_range.hpp  linspace.hpp  logging.hpp  make_vector.hpp  mirror.hpp  name_of.hpp  policy_switch.hpp  rval.hpp  shared_ptr.hpp  sort.hpp  state.hpp  tag.hpp  testing.hpp  unary_array_grammar.hpp  view_params.hpp
komrade/: .gitignore
komrade/examples/: .sconsign.dblite  nvcc_options_file.txt  sort.cu
komrade/komrade/detail/: config.h  sort.inl
komrade/komrade/detail/dispatch/: sort.h
komrade/komrade/sorting/detail/: radix_sort.inl
komrade/komrade/sorting/detail/device/cuda/: stable_radix_sort.inl  stable_radix_sort_key.inl
komrade/komrade/sorting/detail/dispatch/: radix_sort.h
komrade/testing/: .sconsign.dblite
python/: CMakeLists.txt  __init__.py.in  abuse.py  dims_test.py  indexing_test.py  load_pybindings.py  module.cpp  ops_test.py  run_tests.py  slicing_test.py
python/kamasu/: __init__.py
python/kamasu/test/: dims_test.py  indexing_test.py  slicing_test.py
src/: ArrayArrayOp.cpp  ArrayScalarOp.cpp  CMakeLists.txt  array.cpp  array.ipp  array_impl.cpp  assign.cu  cublasP.h  elementwise_array_array_op.cu  elementwise_array_array_op.hpp  elementwise_array_op.ipp  elementwise_array_scalar.cu  elementwise_array_scalar.h.generated  elementwise_array_scalar_op.cu  elementwise_array_scalar_op.hpp  gencode.py  holder.cpp  init.cpp  kernel.cu  kernel.h  kernel.ipp  kernel_util.h  kernel_util.hpp  linspace.cpp  linspace.cu  linspace.h  logging.cpp  make_vector.cpp  matrix.cpp  matrix_impl.cpp  mirror.cpp  opmap.hpp  pool.hpp  primitives.hpp  proto_tags_fwd.hpp  replace.py  rval.cpp  sadd.cu  saxpy.cui  saxpy.h  (+21 more)
talk/: .gitignore  Makefile  beamerthemeresophonic.sty  main.tex  notes.tex  preamble.tex
templates/: ArrayScalarOp.cpp  ArrayScalarOp.cpp.py  UnaryFunctionCalls.hpp  UnaryFunctionCalls.hpp.py  UnaryFunctionDispatch.cpp  UnaryFunctionDispatch.cpp.py  UnaryFunctionDispatch.h  UnaryFunctionExpressions.hpp  UnaryFunctionTags.hpp  UnaryFunctions.hpp  eas.cu  eas.cu.py  eas.hpp  elementwise_array_array.cu  elementwise_array_array.cu.py  elementwise_array_op.cu  elementwise_array_op.h  elementwise_array_op.py  elementwise_array_scalar.cu  elementwise_array_scalar.h  elementwise_array_scalar.h.py  gen.py  generate.py  unary_array_grammar.hpp  unary_array_op.cu  unary_array_op.cu.py  unary_array_op.h  unary_array_op.h.py  unary_array_op.py  unary_array_transforms.h  unary_array_transforms.h.py
test/: 3d.cpp  CMakeLists.txt  I3Test.h  array.cpp  benchmarks.cpp  blah.cpp  conversion.cpp  elementwise.cpp  fleh.cpp  main.cpp  mirror.cpp  mmul.cpp  one.cpp  ops.cpp  small.cpp  sort.cpp  testing_util.cpp  testing_util.hpp  usecase.cpp  whitebox.cpp
tmp/: sin_cos_tan_trick.cpp
utils/: CMakeLists.txt  bleh.cpp  bleh.cu  boost_userconfig.hpp  create.cpp  device_query.cpp  gpumeminfo.c  sgemm.c
